<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/happyCheck"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/happy_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/inLoveCheck"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/in_love_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happyCheck" />

    <CheckBox
        android:id="@+id/cryingCheck"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/crying_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inLoveCheck" />

    <CheckBox
        android:id="@+id/sleepyCheck"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/sleepy_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cryingCheck" />

    <CheckBox
        android:id="@+id/sadCheck"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/sad_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepyCheck" />

    <CheckBox
        android:id="@+id/angryCheck"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/angry_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sadCheck" />

    <CheckBox
        android:id="@+id/afraidCheck"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/afraid_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angryCheck" />

    <TextView
        android:id="@+id/happyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happy"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/inLoveCheck"
        app:layout_constraintStart_toEndOf="@+id/happyCheck"
        app:layout_constraintTop_toTopOf="@+id/happyCheck" />

    <TextView
        android:id="@+id/inLoveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inLove"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/cryingCheck"
        app:layout_constraintStart_toEndOf="@+id/inLoveCheck"
        app:layout_constraintTop_toTopOf="@+id/inLoveCheck" />

    <TextView
        android:id="@+id/cryingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crying"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sleepyCheck"
        app:layout_constraintStart_toEndOf="@+id/cryingCheck"
        app:layout_constraintTop_toTopOf="@+id/cryingCheck" />

    <TextView
        android:id="@+id/sleepyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleepy"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sadCheck"
        app:layout_constraintStart_toEndOf="@+id/sleepyCheck"
        app:layout_constraintTop_toTopOf="@+id/sleepyCheck" />

    <TextView
        android:id="@+id/sadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sad"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/angryCheck"
        app:layout_constraintStart_toEndOf="@+id/sadCheck"
        app:layout_constraintTop_toTopOf="@+id/sadCheck" />

    <TextView
        android:id="@+id/angryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angry"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/afraidCheck"
        app:layout_constraintStart_toEndOf="@+id/angryCheck"
        app:layout_constraintTop_toTopOf="@+id/angryCheck" />

    <TextView
        android:id="@+id/afraidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/afraid"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/afraidCheck"
        app:layout_constraintStart_toEndOf="@+id/afraidCheck"
        app:layout_constraintTop_toTopOf="@+id/afraidCheck" />

    <Button
        android:id="@+id/filterFragmentAllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="All"
        app:layout_constraintEnd_toStartOf="@+id/filterFragmentNoneButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afraidCheck" />

    <Button
        android:id="@+id/filterFragmentNoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="None"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/filterFragmentAllButton"
        app:layout_constraintTop_toBottomOf="@+id/afraidCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
