<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/userEntryGuideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="206dp"
            android:layout_marginEnd="205dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="206dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/userEntryUsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/username"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/userEntryFollowButton"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:focusable="false"
            android:onClick="onFollowClicked"
            android:text="@string/Follow_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userEntryFollowingStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/Following_status"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.872"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.47" />

        <Button
            android:id="@+id/userEntryAcceptButton"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_buttons"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:focusable="false"
            android:onClick="onAcceptClicked"
            android:text="@string/Accept_follow_request"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/userEntryGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userEntryFollowsYouTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Follows you"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/userEntryUnfollowButton"
            android:textColor="@color/colorButtons"
            android:background="@drawable/rounded_buttons_hollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:focusable="false"
            android:onClick="onUnfollowClicked"
            android:text="@string/Unfollow_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/userEntryDeclineButton"
            android:textColor="@color/colorButtons"
            android:background="@drawable/rounded_buttons_hollow"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:focusable="false"
            android:onClick="onDeclineClicked"
            android:text="Decline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/userEntryGuideline"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>